# paperman

./: .gitattributes  .gitignore  README.md  dev-build-and-upload.sh  dev-update-setup.sh  journals-html2dict.py  journals.html  pyproject.toml  setup.py
dev/: build-and-upload.sh  build.sh  clean-ipynb.py  run-tests.sh  update-setup.sh
dev/hooks/: pre-commit
paperman/: __init__.py  __main__.py  cfg.py  finder.py  io.py  project.py  utils.py
paperman/parser/: __init__.py  bib.py  cite.py  common.py  img.py  journal.py  tex.py
paperman/subcommands/: bib.py  clean.py  collect.py  common.py  diff.py  img.py  inp.py  lib.py  library.py  lint.py  make_diff.py  sync.py
src/paperman/: cfg.py  finder.py  project.py  utils.py
src/paperman/parser/: cite.py  img.py  journal.py  tex.py
src/paperman/subcommands/: bib.py  clean.py  collect.py  config.py  diff.py  img.py  inp.py  journal.py  lib.py  lint.py  sort_authors.py  sync.py
test/: lint-example.tex  linter.py  main.py  subcommands.py
